# dragonbones-cocos2dx-v4-demo

./: LICENSE  README.md
DemoProj/: .gitignore  CMakeLists.txt
DemoProj/Classes/: AnimationBase.h  AppDelegate.cpp  BoundingBox.h  CoreElement.cpp  InverseKinematics.h
DemoProj/Classes/dragonBones/cocos2dx/: CCArmatureDisplay.cpp  CCFactory.cpp  CCSlot.cpp
DemoProj/proj.android/: settings.gradle
DemoProj/proj.android/app/: AndroidManifest.xml  build.gradle
DemoProj/proj.ios_mac/mac/: Info.plist
